First Update with Content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Vikram Manikantan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,8 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Vikram Manikantan</a></h1>
-					<p>Astrophysicist / <br />
-					Student / Musician</p>
+					<p>astrophysicist / musician</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -53,19 +52,29 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>about me</h2>
+										<p> I am currently a senior at Northwestern University
+										studying physics and computer science</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p> I was born and raised in Singapore. After completing my high
+										School degree at <a href = "https://www.uwcsea.edu.sg/dover-campus">
+										United World College of South East Asia</a>, I moved to Chicago
+										to pursue my undergraduate degree at <a href="https://www.northwestern.edu/">
+										Northwestern University</a>. I am majoring in physics with a
+										concentration in astronomy, and pursuing a minor in computer science.
+										After graduating in March of 2022, I am hoping to pursue my PhD
+										in astrophysics at a new institution.
+									</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<header class="major">
+										<h2>research </h2>
+									</header>
+									<p>My current research interests</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
@@ -80,8 +89,13 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h2>music</h2>
+									<p> I am currently a guitarist for <a href =
+										"https://www.instagram.com/pmyctunes/?hl=en">Poor Man's Yacht Club</a>.
+										We started our band back in 2019 and have been playing house parties,
+										block parties and live shows ever since. We are currently working on our
+										first project! Album coming in 2022...
+									</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
