--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.instagram.com/vikrammanikantan/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:vikrammanikantan2022@u.northwestern.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -53,11 +53,11 @@
 								<div class="container">
 									<header class="major">
 										<h2>about me</h2>
-										<p> I am currently a senior at Northwestern University
+										<p> i am currently a senior at northwestern university
 										studying physics and computer science</p>
 									</header>
 									<p> I was born and raised in Singapore. After completing my high
-										School degree at <a href = "https://www.uwcsea.edu.sg/dover-campus">
+										school degree at <a href = "https://www.uwcsea.edu.sg/dover-campus">
 										United World College of South East Asia</a>, I moved to Chicago
 										to pursue my undergraduate degree at <a href="https://www.northwestern.edu/">
 										Northwestern University</a>. I am majoring in physics with a
@@ -89,7 +89,9 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h2>music</h2>
+									<header class="major">
+										<h2>music </h2>
+									</header>
 									<p> I am currently a guitarist for <a href =
 										"https://www.instagram.com/pmyctunes/?hl=en">Poor Man's Yacht Club</a>.
 										We started our band back in 2019 and have been playing house parties,
@@ -481,7 +483,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Vikram Manikantan 2021. All rights reserved.</li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
