First Design Complete!
finished the initial design

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/vikmani10" target="_blank" rel="noreferrer noopener" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/vikrammanikantan/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.instagram.com/vikrammanikantan/" target="_blank" rel="noreferrer noopener" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/vikrammanikantan" target="_blank" rel="noreferrer noopener" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:vikrammanikantan2022@u.northwestern.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
@@ -52,18 +52,20 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>about me</h2>
-										<p> i am currently a senior at northwestern university
+										<h2> About Me </h2>
+										<p> I am currently a senior at Northwestern University
 										studying physics and computer science</p>
 									</header>
 									<p> I was born and raised in Singapore. After completing my high
-										school degree at <a href = "https://www.uwcsea.edu.sg/dover-campus">
+										school degree at <a href = "https://www.uwcsea.edu.sg/dover-campus"
+										target="_blank" rel="noreferrer noopener">
 										United World College of South East Asia</a>, I moved to Chicago
-										to pursue my undergraduate degree at <a href="https://www.northwestern.edu/">
+										to pursue my undergraduate degree at <a href="https://www.northwestern.edu/"
+										target="_blank" rel="noreferrer noopener">
 										Northwestern University</a>. I am majoring in physics with a
 										concentration in astronomy, and pursuing a minor in computer science.
-										After graduating in March of 2022, I am hoping to pursue my PhD
-										in astrophysics at a new institution.
+										After graduating in March of 2022, I will be starting my PhD
+										in astrophysics the upcoming fall.
 									</p>
 								</div>
 							</section>
@@ -72,9 +74,53 @@
 							<section id="two">
 								<div class="container">
 									<header class="major">
-										<h2>research </h2>
+										<h2> Research </h2>
+										<p> High-Energy Computational Astrophysics</p>
 									</header>
-									<p>My current research interests</p>
+									<p>
+										My current research interests include black holes, accretion disks,
+										angular momentum transport, collapsars and relativistic jets. I have been a part of
+										<a href="https://ciera.northwestern.edu/directory/sasha-tchekhovskoy/"
+										target="_blank" rel="noreferrer noopener"> Dr. Sasha Tchekhovskoy's</a>
+										research group since the summer of 2019. We use the GPU-accelerated
+										three dimensional magnetohydrodynamic simulation code
+										<a href="https://arxiv.org/abs/1912.10192" target="_blank"
+										 rel="noreferrer noopener" >H-AMR</a>
+										to study black hole accretion in a variety of contexts.
+										Below are some of the projects I have taken part in.
+									</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/momentum.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Angular Momentum Transport</h4>
+												<p> We evolved a torus around a black hole up to
+													120,000 rg/c, where the accretion disk formed becomes magnetically arrested.
+													The black hole spin is fixed at 0.9 and the initial disk
+													thickness (h/r) was 0.03. The contours describes the log
+													of the density with the color map shown on the right of the graph.
+													Overplotted are the streamlines show the direction of angular
+													momentum transport within the accretion disk, winds and jet.
+													Paper coming soon...</p>
+											</div>
+										<!--</article>
+										<article>
+											<a href="#" class="image"><img src="images/disktear.jpg" alt="" /></a>
+											<div class="inner">
+												<h4> topic 2 </h4>
+												<p> </p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/plasmoid.jpg" alt="" /></a>
+											<div class="inner">
+												<h4> topic 3 </h4>
+												<p> </p>
+											</div>
+										</article>
+									-->
+									</div>
+									<!--  ICONS FEATURE LIST
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
@@ -82,7 +128,7 @@
 										<li class="icon solid fa-coffee">Drink much coffee</li>
 										<li class="icon solid fa-bolt">Lightning bolt</li>
 										<li class="icon solid fa-users">Shadow clone technique</li>
-									</ul>
+									</ul> -->
 								</div>
 							</section>
 
@@ -90,34 +136,53 @@
 							<section id="three">
 								<div class="container">
 									<header class="major">
-										<h2>music </h2>
+										<h2>Music </h2>
 									</header>
 									<p> I am currently a guitarist for <a href =
-										"https://www.instagram.com/pmyctunes/?hl=en">Poor Man's Yacht Club</a>.
+										"https://www.instagram.com/pmyctunes/?hl=en" target="_blank"
+										rel="noreferrer noopener">Poor Man's Yacht Club</a>.
 										We started our band back in 2019 and have been playing house parties,
 										block parties and live shows ever since. We are currently working on our
 										first project! Album coming in 2022...
 									</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/botb.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Battle of the Bands</h4>
+												<p>
+													Our first ever stage performance. It was an electric night
+													where bands competed for the opportunity to play at Dillo Day,
+													our yearly music festival with mainstream artists such as Hippo Campus
+													and A$AP Ferg.
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/block.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Garnett Block Party</h4>
+												<p> By far our favorite show of the year. This was an outdoor
+												block party where we played to over 300 people.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/saba.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4> Recording for .wav and Mayfest  </h4>
+												<p> In the fall of 2020, we recorded a few covers to help promote
+												student run music initiatives on campus, including .wav and Mayfest.
+												Check out our cover of Saba <a href="https://www.instagram.com/tv/CKLAfWZArkR/"
+												target="_blank" rel="noreferrer noopener">here.</a> </p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/basement.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Basement Party</h4>
+												<p> This is our most common gig. We usually play a one
+												and half hour gig of mostly rock and music to dance to,
+												e.g. ABBA, Blink-182, John Mayer and the Killers .</p>
 											</div>
 										</article>
 									</div>
@@ -127,9 +192,13 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
+									<header class="major">
+										<h2> Contact Me </h2>
+									</header>
+									<p> email: vikmani [at] u [dot] northwestern [dot] edu.
+									</p>
+									<!--
+									<form method="post" action="mailto:vikrammanikantan2022@u.northwestern.edu">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -142,7 +211,7 @@
 												</ul>
 											</div>
 										</div>
-									</form>
+									</form> -->
 								</div>
 							</section>
 
