issues with image

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/block.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/block2.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Garnett Block Party</h4>
 												<p> By far our favorite show of the year. This was an outdoor
