First final design
- added different banners, changes credits
- need to change font colors, background colors

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/sunrise.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -72,6 +72,9 @@
 
 						<!-- Two -->
 							<section id="two">
+								<div class="image main" data-position="center">
+									<img src="images/bh.jpg" alt="" />
+								</div>
 								<div class="container">
 									<header class="major">
 										<h2> Research </h2>
@@ -134,6 +137,9 @@
 
 						<!-- Three -->
 							<section id="three">
+								<div class="image main" data-position="center">
+									<img src="images/deepfield.jpg" alt="" />
+								</div>
 								<div class="container">
 									<header class="major">
 										<h2>Music </h2>
@@ -191,6 +197,9 @@
 
 						<!-- Four -->
 							<section id="four">
+								<div class="image main" data-position="center">
+									<img src="images/banner.jpg" alt="" />
+								</div>
 								<div class="container">
 									<header class="major">
 										<h2> Contact Me </h2>
@@ -552,8 +561,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Vikram Manikantan 2021. All rights reserved.</li>
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li> &copy; Vikram Manikantan 2021. All rights reserved.</li>
+								<li> Image Credits: NASA</li>
+								<li> Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
