--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 							<section id="two">
 								<div class="image main" data-position="center">
 									<img src="images/bh.jpg" alt="" />
+									<h1> credits: NASA </h1>
 								</div>
 								<div class="container">
 									<header class="major">
@@ -94,7 +95,7 @@
 									</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/momentum.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/momentum.png" alt="" /></a>
 											<div class="inner">
 												<h4>Angular Momentum Transport</h4>
 												<p> We evolved a torus around a black hole up to
