--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/sunrise.jpg" alt="" />
+									<img src="images/deepfield.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -77,7 +77,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2> Research </h2>
+										<h2>My Research </h2>
 										<p> High-Energy Computational Astrophysics</p>
 									</header>
 									<p>
@@ -138,11 +138,11 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="image main" data-position="center">
-									<img src="images/deepfield.jpg" alt="" />
+									<img src="images/block2.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Music </h2>
+										<h2>My Music </h2>
 									</header>
 									<p> I am currently a guitarist for <a href =
 										"https://www.instagram.com/pmyctunes/?hl=en" target="_blank"
@@ -155,6 +155,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/botb.jpg" alt="" /></a>
 											<div class="inner">
+												<h5>05/19</h5>
 												<h4>Battle of the Bands</h4>
 												<p>
 													Our first ever stage performance. It was an electric night
@@ -167,6 +168,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/block2.jpg" alt="" /></a>
 											<div class="inner">
+												<h5>09/21</h5>
 												<h4>Garnett Block Party</h4>
 												<p> By far our favorite show of the year. This was an outdoor
 												block party where we played to over 300 people.</p>
@@ -175,7 +177,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/saba.jpg" alt="" /></a>
 											<div class="inner">
-												<h4> Recording for .wav and Mayfest  </h4>
+												<h5>08/20</h5>
+												<h4>Recording for .wav and Mayfest </h4>
 												<p> In the fall of 2020, we recorded a few covers to help promote
 												student run music initiatives on campus, including .wav and Mayfest.
 												Check out our cover of Saba <a href="https://www.instagram.com/tv/CKLAfWZArkR/"
@@ -185,6 +188,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/basement.jpg" alt="" /></a>
 											<div class="inner">
+												<h5>10/21</h5>
 												<h4>Basement Party</h4>
 												<p> This is our most common gig. We usually play a one
 												and half hour gig of mostly rock and music to dance to,
@@ -198,7 +202,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/sunrise.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -222,7 +226,11 @@
 										</div>
 									</form> -->
 								</div>
+								<div class="image main" data-position="center">
+									<img src="images/banner.jpg" alt="" />
+								</div>
 							</section>
+
 
 						<!-- Five -->
 						<!--
@@ -562,7 +570,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<div class="container">
 							<ul class="copyright">
 								<li> &copy; Vikram Manikantan 2021. All rights reserved.</li>
-								<li> Image Credits: NASA</li>
+								<li> Image Credits: NASA, author</li>
 								<li> Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
