--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://twitter.com/vikmani10" target="_blank" rel="noreferrer noopener" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/astro_vik" target="_blank" rel="noreferrer noopener" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/vikrammanikantan/" target="_blank" rel="noreferrer noopener" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/vikrammanikantan" target="_blank" rel="noreferrer noopener" class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -48,7 +48,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/deepfield.jpg" alt="" />
+									<img src="images/sunrise.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -153,7 +153,7 @@
 									</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/botb.jpg" alt="" /></a>
+											<a href="https://www.instagram.com/pmyctunes/?hl=en" target="_blank" class="image"><img src="images/botb.jpg" alt="" /></a>
 											<div class="inner">
 												<h5>05/19</h5>
 												<h4>Battle of the Bands</h4>
@@ -166,7 +166,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/block2.jpg" alt="" /></a>
+											<a href="https://www.instagram.com/pmyctunes/?hl=en" target="_blank" class="image"><img src="images/block2.jpg" alt="" /></a>
 											<div class="inner">
 												<h5>09/21</h5>
 												<h4>Garnett Block Party</h4>
@@ -175,7 +175,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/saba.jpg" alt="" /></a>
+											<a href="https://www.instagram.com/pmyctunes/?hl=en" target="_blank" class="image"><img src="images/saba.jpg" alt="" /></a>
 											<div class="inner">
 												<h5>08/20</h5>
 												<h4>Recording for .wav and Mayfest </h4>
@@ -186,13 +186,13 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/basement.jpg" alt="" /></a>
+											<a href="https://www.instagram.com/pmyctunes/?hl=en" target="_blank" class="image"><img src="images/basement.jpg" alt="" /></a>
 											<div class="inner">
 												<h5>10/21</h5>
 												<h4>Basement Party</h4>
 												<p> This is our most common gig. We usually play a one
 												and half hour gig of mostly rock and music to dance to,
-												e.g. ABBA, Blink-182, John Mayer and the Killers .</p>
+												e.g. ABBA, Blink-182, John Mayer and the Killers.</p>
 											</div>
 										</article>
 									</div>
@@ -202,7 +202,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="image main" data-position="center">
-									<img src="images/sunrise.jpg" alt="" />
+									<img src="images/banner.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -227,7 +227,7 @@
 									</form> -->
 								</div>
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/deepfield.jpg" alt="" />
 								</div>
 							</section>
 
@@ -569,7 +569,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li> &copy; Vikram Manikantan 2021. All rights reserved.</li>
+								<li> &copy; Vikram Manikantan 2022. All rights reserved.</li>
 								<li> Image Credits: NASA, author</li>
 								<li> Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
