total rebuild - in progess

--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2> About Me </h2>
-										<p> I am currently a senior at Northwestern University
-										studying physics and computer science</p>
+										<h2> Vikram Manikantan </h2>
+										<p> Undergraduate Researcher at CIERA </p>
 									</header>
 									<p> I was born and raised in Singapore. After completing my high
 										school degree at <a href = "https://www.uwcsea.edu.sg/dover-campus"
