--- a/scratch.html
+++ b/scratch.html
@@ -11,7 +11,7 @@
 		<body id="container">
 			<div style="margin:auto; max-width: 1000px;">
 				<nav>
-					<a href="scratch.html">home</a> /
+					<a href="scratch.html"><large>home</large></a> /
 					<a href="aboutme.html">about</a> / 
 					<a href="research.html">research</a> /
 					<a href="outreach.html">outreach</a> /
