--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<body id="container">
 		<div style="margin:auto; max-width: 1000px;">
 			<nav>
-				<a href="scratch.html">home</a> /
+				<a href="index.html">home</a> /
 				<a href="aboutme.html">about</a> / 
 				<a href="research.html">research</a> /
 				<a href="outreach.html">outreach</a> /
@@ -44,7 +44,7 @@
 		
 		<div class="container text-center">
 			<a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" title="Copyright (c) 2023, Vikram Manikantan.">
-				<small>Copyright (c) 2023, Vikram Manikantan</small></a>
+				<small>copyright (c) 2023, Vikram Manikantan</small></a>
 		</div>
 		</div>
 	</body>	
