--- a/scratch.html
+++ b/scratch.html
@@ -50,7 +50,7 @@
 			
 			<div class="container text-center">
 				<a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" title="Copyright (c) 2023, Vikram Manikantan.">
-					<small>Copyright (c) 2023, Vikram Manikantan</small></a>
+					<small>copyright (c) 2023, Vikram Manikantan</small></a>
 			</div>
 			</div>
 		</body>	
