--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<a>about</a> / 
 					<a>research</a> /
 					<a>outreach</a> /
-					<a href="contact.html">contact</a> 
+					<a>contact</a> 
 				</nav>
 
 				<h1>
