first version of website

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,12 +9,13 @@
 
 	<html lang="en-US">
 		<body id="container">
-			<div style="margin:auto; max-width: 1000px;">
+			<div class="main">
 				<nav>
 					<a href="index.html">home</a> /
 					<a href="aboutme.html"><large>about</large></a> / 
 					<a href="research.html">research</a> /
 					<a href="outreach.html">outreach</a> /
+					<a href="music.html">music</a> /
 					<a href="contact.html">contact</a> 
 				</nav>
 
