--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,13 @@
 
 
 	<body id="container">
-		<div style="margin:auto; max-width: 1000px;">
+		<div class="main">
 			<nav>
 				<a href="index.html">home</a> /
 				<a href="aboutme.html">about</a> / 
 				<a href="research.html">research</a> /
 				<a href="outreach.html">outreach</a> /
+				<a href="music.html">music</a> /
 				<a href="contact.html"> <large>contact</large></a> 
 			</nav>
 
