--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				</div>
 			
 			<div class="container text-center">
-				<a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" title="Copyright (c) 2023, Vikram Manikantan.">
+				<a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" target="_blank" title="Copyright (c) 2023, Vikram Manikantan.">
 					<small>copyright (c) 2023, Vikram Manikantan</small></a>
 			</div>
 			</div>
