--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<style>
-		a.leg:link {color: #c25f6f; text-decoration: none;}
-		a.leg:visited {color: #c16070; text-decoration: none;}
+		a.leg:link {color: #7c545a; text-decoration: none;}
+		a.leg:visited {color: #7c545a; text-decoration: none;}
 		a.leg:hover {color: darkmagenta;}
 
 		a.body {text-decoration: none;}
@@ -37,7 +37,7 @@
 					<a href="contact.html">contact</a> 
 				</nav>
 
-				<h1> 
+				<h1 style="margin-top: 15px;"> 
 					Vikram Manikantan
 					<img src="images/avatar3.jpg" alt="picture of me" style="float:right;"> 
 				</h1>
@@ -62,8 +62,8 @@
 				<h2> quick links</h2>
 				<p>
 					my CV:
-					<a href="CV_serious.pdf" target="_blank">[pdf]</a>  
-					<a href="CV_fun.pdf" target="_blank">[fun]</a> 			
+					<a href="docs/CV_serious.pdf" target="_blank">[main]</a>  
+					<a href="docs/CV_fun.pdf" target="_blank">[alt]</a> 			
 					<br>
 					email me:
 					<a href="mailto:vik@arizona.edu" title="E-mail">vik@arizona.edu</a>
@@ -85,7 +85,7 @@
 				</p>
 				<br>
 
-				<h2> music </h2>
+				<h2> music </h2> 
 				<p>
 					spotify: <a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA">
 						[artist page]</a><br>
@@ -96,10 +96,14 @@
 					<a href="music.html">[more]</a>
 				</p>
 				<br>
+				<h2> contact </h2>
+				<p>
+					Steward Observatory, 933 N Cherry Avenue, Tucson, AZ, 85721 <br>
+					email me: <a href="mailto:vik@arizona.edu" title="E-mail">vik@arizona.edu</a>
+					<a href="contact.html">[more]</a> <br>
+				</p>
+				<br>
 
-				<xsmall>
-					 note: forgive the color scheme, I am red-green color blind so I really don't know what's happening
-				</xsmall>
 			<div id="footer"style="text-align: center;">
 				<hr>
 				<div class="container text-center">
