--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
 			<h2> 
 				<img src="images/avatar3.jpg" alt="picture of me" style="float:right;"> 
 			</h2>	
-			
-			email: astro@vikrammanikantan.com	
+			Steward Observatory, 933 N Cherry Avenue, Tucson, AZ <br>
+			email me: <a href="mailto:vik@arizona.edu" title="E-mail">vik@arizona.edu</a> <br>
 
 		<div id="footer"style="text-align: center;">
 			<hr>
