--- a/music.html
+++ b/music.html
@@ -19,11 +19,22 @@
 					<a href="contact.html">contact</a>
 				</nav>
 
-				<h1> 
+				<h1 style="margin-top: 15px;"> 
 					<img src="images/avatar3.jpg" alt="picture of me" style="float:right;"> 
 				</h1>	
 				<p>
-					coming soon...
+					more coming soon...
+				</p>
+
+				<p style="margin-top: 15px;">
+					band: 
+						<a href="https://www.google.com/search?q=Poor+mans+yacht+club " target="_blank" title="google search">[pmyc]</a> / 
+						<a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA" 
+							target="_blank" title="spotify"> [spotify]
+						</a> /
+						<a href="https://www.instagram.com/pmyctunes/" target="_blank" title="Instagram"> [instagram]</a>
+						<br>
+ 						solo: <a href="https://www.instagram.com/quitarvik/" target="_blank" title="Instagram"> [insta]</a>
 				</p>
 
 			<div id="footer"style="text-align: center;">
