--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,23 @@
 				<a href="contact.html"> <large>contact</large></a> 
 			</nav>
 
-			<h2> 
+			<h1 style="margin-top: 15px;"> 
 				<img src="images/avatar3.jpg" alt="picture of me" style="float:right;"> 
-			</h2>	
-			Steward Observatory, 933 N Cherry Avenue, Tucson, AZ <br>
-			email me: <a href="mailto:vik@arizona.edu" title="E-mail">vik@arizona.edu</a> <br>
+			</h1>	
+			
+			<p>
+				9:30am-6pm M-F
+			</p>
+			<p style="margin-top: 10px;">
+				933 N Cherry Avenue <br>
+				Tucson, AZ <br>
+				85721 <br>
+			</p>
+			<p style="margin-top: 10px;">
+				email me: <a href="mailto:vik@arizona.edu" target="_blank" title="E-mail">vik@arizona.edu</a> <br> 
+				twitter: <a href="https://twitter.com/astro_vik" target="_blank" title="twitter">@astro_vik</a> <br>
+				github: <a href="https://github.com/vikrammanikantan" target="_blank" title="github">vikrammanikantan</a> <br>
+			</p>
 
 		<div id="footer"style="text-align: center;">
 			<hr>
