--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
 					<a href="contact.html">contact</a> 
 				</nav>
 
-				<h1> 
+				<h1 style="margin-top: 15px;"> 
 					<img src="images/avatar3.jpg" alt="picture of me" style="float:right;"> 
 				</h1>	
 				<p>
