--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 	<head>
 		<title>Vikram Manikantan</title>
 		<meta charset="utf-8" />
