--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 	<head>
 		<title>Vikram Manikantan</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.png" style="height: 50;width: 50;aspect-ratio: 1;">
@@ -38,9 +38,10 @@
 				</nav>
 
 				<h1 style="margin-top: 15px;"> 
-					Vikram Manikantan
-					<img src="images/avatar3.jpg" alt="picture of me" style="float:right;"> 
+					Vikram Manikantan 
 				</h1>
+
+				<img src="images/avatar3.jpg" alt="picture of me">
 				
 				<p>
 					Currently: 
@@ -98,9 +99,8 @@
 				<br>
 				<h2> contact </h2>
 				<p>
-					Steward Observatory, 933 N Cherry Avenue, Tucson, AZ, 85721 <br>
 					email me: <a href="mailto:vik@arizona.edu" title="E-mail">vik@arizona.edu</a>
-					<a href="contact.html">[more]</a> <br>
+					<br> <a href="contact.html">[more]</a> <br>
 				</p>
 				<br>
 
@@ -121,7 +121,7 @@
 						<a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA" target="_blank" class="fab fa-spotify fa-1x" rel="me" title="spotify"></a>
 				</div>
 			
-			<div class="container text-center">
+			<div>
 				<a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" target="_blank" title="Copyright (c) 2023, Vikram Manikantan.">
 					<small>copyright (c) 2023, Vikram Manikantan</small></a>
 			</div>
