--- a/research.html
+++ b/research.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 	<head>
 		<title>Vikram Manikantan</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.png" style="height: 50;width: 50;aspect-ratio: 1;">
