mobile version footer resized

--- a/research.html
+++ b/research.html
@@ -28,8 +28,6 @@
 					<br style="padding-top: 10px;">
 
 					<hr>
-
-					<br style="padding-bottom: 10px;">
 					
 					<a href="mailto:vik@arizona.edu" target="_blank" class="fas fa-envelope fa-1x" title="E-mail"></a> /
 					
@@ -45,8 +43,8 @@
 
 					<br>
 
-					<a style="font-size: 80%;" href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" target="_blank" title="Copyright (c) 2023, Vikram Manikantan.">
-					<small>copyright (c) 2023, Vikram Manikantan</small></a>
+					<a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" target="_blank" title="Copyright (c) 2023, Vikram Manikantan.">
+					<xsmall>copyright (c) 2023, Vikram Manikantan</xsmall></a>
 
 					<br>     
 
