--- a/index.html
+++ b/index.html
@@ -109,8 +109,6 @@
 					<br style="padding-top: 10px;">
 
 					<hr>
-
-					<br style="padding-bottom: 10px;">
 					
 					<a href="mailto:vik@arizona.edu" target="_blank" class="fas fa-envelope fa-1x" title="E-mail"></a> /
 					
@@ -126,8 +124,9 @@
 
 					<br>
 
-					<a style="font-size: 80%;" href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" target="_blank" title="Copyright (c) 2023, Vikram Manikantan.">
-					<small>copyright (c) 2023, Vikram Manikantan</small></a>
+					<a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" target="_blank" title="Copyright (c) 2023, Vikram Manikantan.">
+						<xsmall>copyright (c) 2023, Vikram Manikantan</xsmall>
+					</a>
 
 					<br>
 
