new photo for about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
 					<a href="contact.html">contact</a> 
 				</nav>
 
-				<img src="images/avatar3.jpg" alt="picture of me">
+				<img src="images/grad_photo.jpg" alt="Grad photo">
 
 				<p>
 					coming soon...
