--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					Vikram Manikantan 
 				</h1>
 
-				<img src="images/avatar3.jpg" alt="Profile photo">
+				<img src="images/grad_photo.jpgalt="Profile photo">
 				
 				<p class="intro">
 					Currently: 
