removed about section

--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,14 @@
 	<body id="container">
 		<div class="main">
 			<nav>
-				<a href="index.html">home</a> /
-				<a href="aboutme.html">about</a> / 
+				<a href="index.html">home</a> / 
 				<a href="research.html">research</a> /
 				<a href="outreach.html">outreach</a> /
 				<a href="music.html">music</a> /
 				<a href="contact.html"> <large>contact</large></a> 
 			</nav>
+
+			<img src="images/grad_photo.jpg" alt="Grad photo">
 
 			
 			<p>
