--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 github: <a href="https://www.github.com/vikrammanikantan" title="github"  target="_blank">vikrammanikantan</a> <br>
 
                 twitter: <a href="https://www.twitter.com/astro_vik" title="twitter"  target="_blank">@astro_vik</a> <br>
-                
+
                 linkedin: <a href="https://www.linkedin.com/in/vikrammanikantan" title="linkedin"  target="_blank">in/vikrammanikantan</a>
 
             </p>
@@ -100,13 +100,14 @@
         </section>
 
         <div class="footer">
-            <hr>
-            <a href="mailto:vik@arizona.edu" target="_blank" class="fas fa-envelope fa-1x" title="E-mail"></a> /
-            <a href="https://github.com/vikrammanikantan" target="_blank" class="fab fa-github fa-1x" title="GitHub"></a> /				
-            <a href="https://linkedin.com/in/vikrammanikantan" target="_blank" class="fab fa-linkedin-in fa-1x" title="LinkedIn"></a> /
-            <a href="https://twitter.com/astro_vik" target="_blank" class="fab fa-twitter fa-1x" rel="me" title="Twitter"></a> /
-            <a href="https://www.instagram.com/vikrammanikantan/" target="_blank" class="fab fa-instagram fa-1x" rel="me" title="Instagram"></a> /
-            <a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA" target="_blank" class="fab fa-spotify fa-1x" rel="me" title="spotify"></a>
+            <br>
+
+            <a href="mailto:vik@arizona.edu" target="_blank" class="fas fa-envelope fa-1x" title="E-mail"> </a>
+            <a href="https://github.com/vikrammanikantan" target="_blank" class="fab fa-github fa-1x" title="GitHub"> </a>
+            <a href="https://linkedin.com/in/vikrammanikantan" target="_blank" class="fab fa-linkedin-in fa-1x" title="LinkedIn"> </a>
+            <a href="https://twitter.com/astro_vik" target="_blank" class="fab fa-twitter fa-1x" rel="me" title="Twitter"> </a>
+            <a href="https://www.instagram.com/vikrammanikantan/" target="_blank" class="fab fa-instagram fa-1x" rel="me" title="Instagram"> </a>  
+            <a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA" target="_blank" class="fab fa-spotify fa-1x" rel="me" title="spotify"> </a>
 
             <br>
 
