added name to header w/ link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <html lang="en-US">
     <div class="main">
         <nav> 
-            <a href="index.html"><large>home</large></a> /
+            <a class="title" href="index.html" style="font-size: 200%;"> Vikram Manikantan </a>
+
             <a href="research.html">research</a> /
             <a href="outreach.html">outreach</a> /
             <a href="music.html">music</a> /
@@ -21,8 +22,6 @@
 
         <section class="element">
             <img src="images/avatar3.jpg" alt="Profile photo">
-
-            <h1 class="name"> Vikram Manikantan </h1>
             
             <p class="intro">
                 Currently: 
