--- a/music.html
+++ b/music.html
@@ -11,13 +11,14 @@
 
 <html lang="en-US">
 	<div class="main">
-		<nav>
-			<a href="index.html">home</a> /
-			<a href="research.html">research</a> /
-			<a href="outreach.html">outreach</a> /
-			<a href="music.html"><large>music</large></a> /
-			<a href="contact.html">contact</a>
-		</nav>
+		<nav> 
+            <a class="title" href="index.html"> Vikram Manikantan </a>
+
+            <a href="research.html">research</a> /
+            <a href="outreach.html">outreach</a> /
+            <a href="music.html"><large>music</large></a> /
+            <a href="contact.html">contact</a> 
+        </nav>
 
 		<img src="images/music.jpg" alt="picture of me"> 
 
