--- a/research.html
+++ b/research.html
@@ -10,8 +10,9 @@
 	<html lang="en-US">
 		<body id="container">
 			<div class="main">
-				<nav>
-					<a href="index.html">home</a> /
+				<nav> 
+					<a class="title" href="index.html"> Vikram Manikantan </a>
+		
 					<a href="research.html"><large>research</large></a> /
 					<a href="outreach.html">outreach</a> /
 					<a href="music.html">music</a> /
