--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,14 @@
 
 <html lang="en-US">
 	<div class="main">
-		<nav>
-			<a href="index.html">home</a> / 
-			<a href="research.html">research</a> /
-			<a href="outreach.html">outreach</a> /
-			<a href="music.html">music</a> /
-			<a href="contact.html"> <large>contact</large></a> 
-		</nav>
+		<nav> 
+            <a class="title" href="index.html"> Vikram Manikantan </a>
+
+            <a href="research.html">research</a> /
+            <a href="outreach.html">outreach</a> /
+            <a href="music.html">music</a> /
+            <a href="contact.html"><large>contact</large></a> 
+        </nav>
 
 		<section class="element">
 			<img src="images/grad_photo.jpg" alt="Grad photo">
