--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <html lang="en-US">
-    <div class="main">
-        <nav> 
-            <a class="title" href="index.html" style="font-size: 200%;"> Vikram Manikantan </a>
+	<div class="main">
+		<nav> 
+			<a class="title" href="index.html"> Vikram Manikantan </a>
 
-            <a href="research.html">research</a> /
-            <a href="outreach.html">outreach</a> /
-            <a href="music.html">music</a> /
-            <a href="contact.html">contact</a> 
-        </nav>
+			<a href="research.html">research</a> /
+			<a href="outreach.html">outreach</a> /
+			<a href="music.html">music</a> /
+			<a href="contact.html">contact</a> 
+		</nav>
 
         <section class="element">
             <img src="images/avatar3.jpg" alt="Profile photo">
@@ -98,20 +98,18 @@
 
         <div class="footer">
             <br>
-
-            <a href="mailto:vik@arizona.edu" target="_blank" class="fas fa-envelope fa-1x" title="E-mail"> </a>
-            <a href="https://github.com/vikrammanikantan" target="_blank" class="fab fa-github fa-1x" title="GitHub"> </a>
-            <a href="https://linkedin.com/in/vikrammanikantan" target="_blank" class="fab fa-linkedin-in fa-1x" title="LinkedIn"> </a>
-            <a href="https://twitter.com/astro_vik" target="_blank" class="fab fa-twitter fa-1x" rel="me" title="Twitter"> </a>
-            <a href="https://www.instagram.com/vikrammanikantan/" target="_blank" class="fab fa-instagram fa-1x" rel="me" title="Instagram"> </a>  
-            <a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA" target="_blank" class="fab fa-spotify fa-1x" rel="me" title="spotify"> </a>
-
-            <br>
-
-            <a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" target="_blank" title="Copyright (c) 2023, Vikram Manikantan.">
-                <xsmall>copyright (c) 2023, Vikram Manikantan</xsmall>
-            </a>
-
+            <section class="element">
+                <a href="mailto:vik@arizona.edu" target="_blank" class="fas fa-envelope fa-1x" title="E-mail"> </a>
+                <a href="https://github.com/vikrammanikantan" target="_blank" class="fab fa-github fa-1x" title="GitHub"> </a>
+                <a href="https://linkedin.com/in/vikrammanikantan" target="_blank" class="fab fa-linkedin-in fa-1x" title="LinkedIn"> </a>
+                <a href="https://twitter.com/astro_vik" target="_blank" class="fab fa-twitter fa-1x" rel="me" title="Twitter"> </a>
+                <a href="https://www.instagram.com/vikrammanikantan/" target="_blank" class="fab fa-instagram fa-1x" rel="me" title="Instagram"> </a>  
+                <a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA" target="_blank" class="fab fa-spotify fa-1x" rel="me" title="spotify"> </a>
+                <br>
+                <a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io" target="_blank" title="Copyright (c) 2023, Vikram Manikantan.">
+                    <xsmall>copyright (c) 2023, Vikram Manikantan</xsmall>
+                </a>
+             </section>
             <br>
         </div>
     </div>
