modified navigation, added blinking cursor

--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
 <html lang="en-US">
 	<div class="main">
 		<nav> 
-            <a class="title" href="index.html"> Vikram Manikantan </a>
+            <a class="title" href="index.html">Vikram Manikantan</a><span class="blinking-cursor">.</span>
 
             <a href="research.html">research</a> /
             <a href="outreach.html">outreach</a> /
             <a href="music.html">music</a> /
-            <a href="contact.html"><large>contact</large></a> 
+            <a href="contact.html" style="font-weight:900; font-size: 120%;">contact</a> 
         </nav>
 
 		<section class="element">
@@ -38,7 +38,6 @@
 		</section>
 
 		<div class="footer">
-            <br>
             <section class="element">
                 <a href="mailto:vik@arizona.edu" target="_blank" class="fas fa-envelope fa-1x" title="E-mail"> </a>
                 <a href="https://github.com/vikrammanikantan" target="_blank" class="fab fa-github fa-1x" title="GitHub"> </a>
