--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <html lang="en-US">
 	<div class="main">
-		<nav> 
-			<a class="title" href="index.html"> Vikram Manikantan </a>
-
-			<a href="research.html">research</a> /
-			<a href="outreach.html">outreach</a> /
-			<a href="music.html">music</a> /
-			<a href="contact.html">contact</a> 
-		</nav>
+		
+        <nav> 
+            <a class="title" href="index.html">Vikram Manikantan</a> <span class="blinking-cursor" style="margin-left: -10px;">.</span>
+            <a href="research.html">research</a> /
+            <a href="outreach.html">outreach</a> /
+            <a href="music.html">music</a> /
+            <a href="contact.html">contact</a> 
+        </nav>
 
         <section class="element">
             <img src="images/avatar3.jpg" alt="Profile photo">
