--- a/research.html
+++ b/research.html
@@ -12,9 +12,9 @@
 <html lang="en-US">
 	<div class="main">
 		<nav> 
-			<a class="title" href="index.html"> Vikram Manikantan </a>
+			<a class="title" href="index.html">Vikram Manikantan</a><span class="blinking-cursor">.</span>
 
-			<a href="research.html"><large>research</large></a> /
+			<a href="research.html" style="font-weight:900; font-size: 120%;">research</a> /
 			<a href="outreach.html">outreach</a> /
 			<a href="music.html">music</a> /
 			<a href="contact.html">contact</a> 
