--- a/music.html
+++ b/music.html
@@ -12,17 +12,17 @@
 <html lang="en-US">
 	<div class="main">
 		<nav> 
-            <a class="title" href="index.html"> Vikram Manikantan </a>
+            <a class="title" href="index.html">Vikram Manikantan</a><span class="blinking-cursor">.</span>
 
             <a href="research.html">research</a> /
             <a href="outreach.html">outreach</a> /
-            <a href="music.html"><large>music</large></a> /
+            <a href="music.html" style="font-weight:900; font-size: 120%;">music</a> /
             <a href="contact.html">contact</a> 
-        </nav>
-
-		<img src="images/music.jpg" alt="picture of me"> 
+        </nav> 
 
 		<section class="element">
+            <img src="images/music.jpg" alt="picture of me">
+
 			<p>
 				more coming soon...
 			</p>
