--- a/outreach.html
+++ b/outreach.html
@@ -12,10 +12,10 @@
 <html lang="en-US">
 	<div class="main">
 		<nav> 
-			<a class="title" href="index.html"> Vikram Manikantan </a>
+			<a class="title" href="index.html">Vikram Manikantan</a><span class="blinking-cursor">.</span>
 
 			<a href="research.html">research</a> /
-			<a href="outreach.html"><large>outreach</large></a> /
+			<a href="outreach.html" style="font-weight:900; font-size: 120%;">outreach</a> /
 			<a href="music.html">music</a> /
 			<a href="contact.html">contact</a> 
 		</nav>
