added visuals to navigation bar

--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
 		<nav> 
             <a class="title" href="index.html">Vikram Manikantan</a><span class="blinking-cursor">.</span>
 
-            <a href="research.html">research</a> /
-            <a href="outreach.html">outreach</a> /
-            <a href="music.html">music</a> /
-            <a href="contact.html" style="font-weight:900; font-size: 120%;">contact</a> 
+            <a class="nav" href="research.html">research</a>  
+			<a class="nav" href="outreach.html">outreach</a>  
+			<a class="nav" href="music.html">music</a>  
+			<a class="navselected" href="contact.html">contact</a>
         </nav>
 
 		<section class="element">
