--- a/outreach.html
+++ b/outreach.html
@@ -14,10 +14,10 @@
 		<nav> 
 			<a class="title" href="index.html">Vikram Manikantan</a><span class="blinking-cursor">.</span>
 
-			<a href="research.html">research</a> /
-			<a href="outreach.html" style="font-weight:900; font-size: 120%;">outreach</a> /
-			<a href="music.html">music</a> /
-			<a href="contact.html">contact</a> 
+			<a class="nav" href="research.html">research</a>  
+			<a class="navselected" href="outreach.html">outreach</a>  
+			<a class="nav" href="music.html">music</a>  
+			<a class="nav" href="contact.html">contact</a>
 		</nav>
 
 		<section class="element">
