added 3D boxes to home page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section> 
 
         <section class="element">
-            <h2>About Me</h2>
+            <h2>about me</h2>
             <p>
                 I am currently a first year student in the astronomy and astrophysics PhD program at Steward Observatory,
                 at the University of Arizona.
@@ -43,7 +43,7 @@
         </section>
 
         <section class="element">
-            <h2>Quick Links</h2>
+            <h2>quick links</h2>
             <p>
                 My CV:
                 <a href="docs/CV_serious.pdf" target="_blank">[main]</a>  
@@ -62,7 +62,7 @@
         </section>
 
         <section class="element">
-            <h2>Research</h2> <a href="research.html">[more]</a>
+            <h2>research</h2> <a href="research.html">[more]</a>
             <p>
                 My research focuses on the theoretical and computational study of compact object systems such as
                 neutron stars, binary black holes, supermassive black holes, their accretion flows and their
@@ -71,14 +71,14 @@
         </section>
 
         <section class="element">
-            <h2>Outreach</h2> <a href="outreach.html">[more]</a>
+            <h2>outreach</h2> <a href="outreach.html">[more]</a>
             <p>
                 Coming soon...
             </p>
         </section>
 
         <section class="element">
-            <h2>Music</h2> <a href="music.html">[more]</a>
+            <h2>music</h2> <a href="music.html">[more]</a>
             <p>
                 Spotify: <a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA" target="_blank">
                     [artist page]</a><br>
@@ -90,7 +90,7 @@
         </section>
 
         <section class="element">
-        <h2>Contact</h2> <a href="contact.html">[more]</a>
+        <h2>contact</h2> <a href="contact.html">[more]</a>
             <p style="padding-bottom: 50px;">
                 Email me: <a href="mailto:vik@arizona.edu" title="E-mail" target="_blank"> vik@arizona.edu </a><br>
                 Twitter: <a href="https://www.twitter.com/astro_vik" title="twitter"  target="_blank">@astro_vik</a> <br>
