spacing edit for footer of index

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <section class="element">
             <h2>music</h2> <a href="music.html">[more]</a>
-            <p>
+            <p style="padding-bottom: 50px;">
                 Spotify: <a href="https://open.spotify.com/artist/2Ck3OQPalGyoPDUCMRT149?si=fdnsT15oTtmgPk1gtr-hRA" target="_blank">
                     [artist page]</a><br>
                 Press: <a target="_blank" 
